--- a/app/scripts/views/contatiner/main.html
+++ b/app/scripts/views/contatiner/main.html
@@ -1,7 +1,8 @@
 <div>
     <nav class="navbar topnav-navbar navbar-fixed-top" role="navigation">
         <div class="navbar-header text-center">
-            <a class="navbar-brand" ui-sref="pintuan.add">回家么</a></div>
+            <a class="navbar-brand">HJM</a>
+        </div>
         <div class="collapse navbar-collapse">
             <!--<form class="navbar-form navbar-left ng-pristine ng-valid" role="search"><span-->
             <!--class="glyphicon glyphicon-search"></span>-->
@@ -15,7 +16,7 @@
         <aside id="sidebar">
             <perfect-scrollbar class="sidenav-outer" wheel-propagation="true" min-scrollbar-length="20">
                 <side-menu></side-menu>
-                <side-widgets></side-widgets>
+                <!--<side-widgets></side-widgets>-->
             </perfect-scrollbar>
         </aside>
         <section id="body-container" ui-view>
