--- a/app/scripts/views/directive/hjm/hjm-grid.html
+++ b/app/scripts/views/directive/hjm/hjm-grid.html
@@ -1,14 +1,15 @@
 <div>
     <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title">
-                <div class="row">
-                    <div class="col-sm-6" style="line-height: 34px;">
-                        <span class="content" ng-bind="configDef.title||'Regular'"></span>
-                    </div>
-                    <div class="routerSection col-sm-6"></div>
-                </div>
-            </h3>
+        <div class="panel-heading routerTitleSection">
+            <!--<h3 class="panel-title" ng-bind="configDef.title||''">-->
+                <!--<span class="content" ng-bind="configDef.title||''"></span>-->
+                <!--<div class="row">-->
+                    <!--<div class="col-sm-6" style="line-height: 34px;">-->
+                        <!--<span class="content" ng-bind="configDef.title||''"></span>-->
+                    <!--</div>-->
+                    <!--<div class="routerSection col-sm-6"></div>-->
+                <!--</div>-->
+            <!--</h3>-->
         </div>
         <div class="panel-body">
             <div class="searchSection"></div>
