--- a/app/scripts/views/main/container.html
+++ b/app/scripts/views/main/container.html
@@ -1,1 +1,2 @@
-<div ui-view="" style="position: relative;"></div>
+<div ui-view=""></div>
+<!--<div ui-view="" style="position: relative;"></div>-->
