--- a/app/styles/bootstrap/index.css
+++ b/app/styles/bootstrap/index.css
@@ -6940,7 +6940,8 @@ body {
 }
 
 #body-container {
-    margin-left: 235px;
+    /*margin-left: 235px;*/
+    margin-left: 45px;
     padding: 10px;
     margin-top: 50px;
     overflow: auto;
@@ -8004,12 +8005,17 @@ pre {
     list-style-type: disc
 }
 
-#sidebar {
+#sidebar:hover {
     width: 235px;
+}
+
+#sidebar {
+    width: 45px;
     position: fixed;
     top: 0;
     bottom: 0;
-    background: #3ca2e0
+    /*background: #3ca2e0;*/
+    z-index: 9999;
 }
 
 #sidebar .sidenav-outer {
@@ -8160,7 +8166,11 @@ pre {
     padding-left: 0;
     width: 190px;
     min-height: 40px;
-    padding-top: 3px
+    padding-top: 3px;
+
+    border: 1px #3ca2e0 solid;
+    border-left: 0;
+    margin-top: -1px;
 }
 
 #sidebar div.side-menu .menu-body ul.sidenav li ul.nested-dropdown li {
@@ -8213,7 +8223,8 @@ pre {
     background: 0 0;
     border-radius: 0;
     border: none;
-    border-bottom: solid 1px rgba(0, 0, 0, .05)
+    border-bottom: solid 1px rgba(0, 0, 0, .05);
+    z-index: 99999;
 }
 
 .topnav-navbar .collapse.navbar-collapse {
@@ -8221,8 +8232,10 @@ pre {
 }
 
 .topnav-navbar .navbar-header {
-    width: 235px;
-    background: #3ca2e0
+    /*width: 235px;*/
+    width: 45px;
+    /*background: #3ca2e0;*/
+    background: #2089c9;
 }
 
 .topnav-navbar .navbar-header .navbar-brand {
