--- a/app/scripts/views/directive/show_str.html
+++ b/app/scripts/views/directive/show_str.html
@@ -6,7 +6,7 @@
         </div>
         <div class="modal-body">
             <ul class="list-inline">
-                <li ng-repeat="item in str" ng-bind="item" class="wrap width_100"></li>
+                <li ng-repeat="item in str" ng-bind="item+','" class="wrap width_100"></li>
             </ul>
         </div>
         <div class="modal-footer">
