--- a/app/scripts/views/biz/coupon/update.html
+++ b/app/scripts/views/biz/coupon/update.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <a class="btn btn-success btn-rounded" ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
-                <a class="btn btn-success btn-rounded" ng-click="aaa()">提交</a>
+                <!--<a class="btn btn-success btn-rounded" ng-click="aaa()">提交</a>-->
             </form>
         </div>
     </div>
