--- a/app/scripts/views/directive/nav-top/nav-account.html
+++ b/app/scripts/views/directive/nav-top/nav-account.html
@@ -25,7 +25,7 @@
             <img src="styles/images/flat-avatar.png" class="topnav-img">
             <span class="hidden-sm" ng-bind="hjm.username"></span></a>
         <ul class="dropdown-menu pull-right animated fadeIn">
-            <li><a ui-sref="main.account.profile">个人信息</a></li>
+            <li><a ui-sref="main.account.profile">修改个人信息</a></li>
             <li><a class="ng-binding" ng-click="change_city()">切换定位城市</a></li>
             <li><a class="ng-binding" ng-click="logout()">退出</a></li>
         </ul>
