--- a/app/scripts/views/biz/account/profile.html
+++ b/app/scripts/views/biz/account/profile.html
@@ -12,7 +12,7 @@
                              placeholder="账户ID" ng-disabled="true"></div>
                         <div form-input text="负责人账号" ng-model="param.username" placeholder="负责人账号"
                              required="true" ng-disabled="true"></div>
-                        <div form-input text="初始化密码" ng-model="param.userpass" placeholder="初始化密码" ></div>
+                        <div form-input text="密码" ng-model="param.userpass" placeholder="初始化密码" ></div>
                         <div form-input text="手机号码" ng-model="param.mobile" min="11" max="11" placeholder="11位数字"
                              required="true"></div>
                         <!--<div form-radio text="角色" ng-model="param.role" required="true" default="param.role"-->
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <a class="btn btn-success btn-rounded" ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
-                <a class="btn btn-warning btn-rounded" ng-click="aaa()">查看提交的数据</a>
+                <!--<a class="btn btn-warning btn-rounded" ng-click="aaa()">查看提交的数据</a>-->
             </form>
         </div>
     </div>
