--- a/app/scripts/views/biz/product/update.html
+++ b/app/scripts/views/biz/product/update.html
@@ -13,20 +13,20 @@
                              ng-show="$stateParams.product_id"
                              placeholder="商品ID" ng-disabled="$stateParams.product_id"></div>
                         <div form-input text="商品标题" ng-model="param.title" placeholder="商品标题" required="true"></div>
-                        <div form-input text="商品简介" ng-model="param.brief" placeholder="不超过30个字" min="1" max="30"></div>
+                        <div form-input text="商品简介" ng-model="param.brief" placeholder="不超过30个字" minlength="1" maxlength="30"></div>
                         <div form-radio text="商品品类" ng-model="param.sku" required="true" default="1"
                              source="[{text:'鲜花',value:'1'},{text:'其他',value:'0'}]" source-api=""></div>
                         <div form-radio text="商品类型" ng-model="param.frequency_type" required="true" default="2"
                              source="[{text:'包月',value:2},{text:'单次',value:1}]" source-api=""></div>
                         <div form-input text="商品单位" ng-model="param.price_label"></div>
-                        <div form-input text="库存总数" ng-model="param.origin_inventory" type="number"
+                        <div form-input text="库存总数" ng-model="param.origin_inventory" min="0" type="number"
                              required="true"></div>
                         <div form-input text="单次限购份数" ng-model="param.order_count_max" type="number"
-                             min="1" max="30" required="true"></div>
+                             min="1" required="true"></div>
                         <div form-date-time text="上架时间" ng-model="param.start_time" required="true"></div>
                         <div form-date-time text="下架时间" ng-model="param.end_time" required="true"></div>
                         <div form-image text="运营大图" ng-model="param.pics" max="100" required="true"></div>
-                        <div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="1" required="true"></div>
+                        <div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="100" required="true"></div>
                         <div form-image-content text="图文详情" ng-model="param.contents" required="true"></div>
                     </div>
                 </div>
@@ -39,30 +39,28 @@
                         <div form-textarea text="玩法说明内容" ng-model="param.play_introduction"
                              placeholder="玩法说明内容" required="true"></div>
 
-                        <div form-input text="起始价" ng-model="param.high_price" required="true" type="number"
-                             ng-show="param.category==1"
-                             ng-disabled="$stateParams.product_id"></div>
-                        <div form-input text="底价" ng-model="param.bottom_price" required="true" type="number"
-                             ng-show="param.category==1"
-                             ng-disabled="$stateParams.product_id"></div>
-                        <div form-input text="单人返现金额" ng-model="param.per_cut_amount" required="true" type="number"
-                             ng-show="param.category==1"
-                             ng-disabled="$stateParams.product_id"></div>
+                        <div form-input text="起始价" ng-model="param.high_price" required="true" min="0" type="number"
+                             ng-show="param.category==1" ng-disabled="$stateParams.product_id"></div>
+                        <div form-input text="底价" ng-model="param.bottom_price" required="true" min="0" type="number"
+                             ng-show="param.category==1" ng-disabled="$stateParams.product_id"></div>
+                        <div form-input text="单人返现金额" ng-model="param.per_cut_amount" required="true" min="0"
+                             type="number" ng-show="param.category==1" ng-disabled="$stateParams.product_id"></div>
 
-                        <div form-input text="拼团人数" ng-model="param.group_min_num" required="true" type="number"
+                        <div form-input text="拼团人数" ng-model="param.group_min_num" required="true" min="0" type="number"
                              ng-show="param.category==2"></div>
-                        <div form-input text="拼团单价" ng-model="param.price" required="true" type="number"
+                        <div form-input text="拼团单价" ng-model="param.price" required="true" min="0" type="number"
                              ng-show="param.category==2"
                              ng-disabled="$stateParams.product_id"></div>
 
-                        <div form-input text="拼团有效时间(小时)" ng-model="param.group_seconds" required="true"
+                        <div form-input text="拼团有效时间(小时)" ng-model="param.group_seconds" min="0" required="true"
                              type="number" placeholder="单位:小时"></div>
                     </div>
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>配送规则</h4>
-                        <div form-input text="配送次数" ng-model="param.frequency_num" type="number" required="true"></div>
+                        <div form-input text="配送次数" ng-model="param.frequency_num" type="number" min="0"
+                             required="true"></div>
                         <div form-radio text="物流" ng-model="param.delivery_type" required="true"
                              source="[{text:'顺丰配送',value:'1'},{text:'商家负责配送',value:'2'},{text:'无配送',value:'3'}]"
                              source-api=""></div>
