--- a/app/styles/bootstrap/index.css
+++ b/app/styles/bootstrap/index.css
@@ -2650,7 +2650,7 @@ caption, th {
 }
 
 .table-bordered > thead > tr > th, .table-bordered > thead > tr > td {
-    border-bottom-width: 2px
+    /*border-bottom-width: 2px*/
 }
 
 .table-striped > tbody > tr:nth-of-type(odd) {
@@ -10080,6 +10080,7 @@ html, body {
     color: #E21100;
     vertical-align: middle;
     font-size: 24px;
+    vertical-align: -webkit-baseline-middle;
 }
 
 /*表单*/
