delete more files

--- a/app/scripts/views/biz/sms/add.html
+++ b/app/scripts/views/biz/sms/add.html
@@ -12,7 +12,7 @@
                              source="[{text:'是',value:'1'},{text:'否',value:'0'}]" default="1"></div>
                         <div form-textarea text="短信内容" ng-model="param.content"
                              placeholder="短信内容" required="true"></div>
-                        <div form-textarea text="发送用户" ng-model="param.mobiles"
+                        <div form-textarea text="发送用户" ng-model="mobiles"
                              placeholder="发送用户手机号,用逗号隔开" required="true"></div>
                     </div>
                 </div>
