--- a/app/scripts/views/biz/product/update.html
+++ b/app/scripts/views/biz/product/update.html
@@ -23,6 +23,8 @@
                              required="true"></div>
                         <div form-input text="单次限购份数" ng-model="param.order_count_max" type="number"
                              min="1" required="true"></div>
+                        <!--<div form-input text="已售份数基数" ng-model="param.base_sale_count" type="number"-->
+                             <!--min="1" required="true"></div>-->
                         <div form-date-time text="上架时间" ng-model="param.start_time" required="true"></div>
                         <div form-date-time text="下架时间" ng-model="param.end_time" required="true"></div>
                         <div form-image text="运营大图" ng-model="param.pics" max="100" required="true"></div>
