--- a/app/scripts/views/biz/coupon/update.html
+++ b/app/scripts/views/biz/coupon/update.html
@@ -10,8 +10,8 @@
                         <h4>优惠劵</h4>
                         <div form-input text="优惠劵名称" ng-model="param.title" placeholder="优惠劵名称" required="true"></div>
 
-                        <div form-radio text="适用范围" ng-model="param.category" required="true"
-                             source="[{text:'砍价团',value:'1'},{text:'人数团',value:'2'},{text:'众筹团',value:'3'},{text:'邻里团',value:'4'}]"
+                        <div form-radio text="适用范围" ng-model="param.category" required="true" default="0"
+                             source="[{text:'不限',value:'0'},{text:'砍价团',value:'1'},{text:'人数团',value:'2'},{text:'众筹团',value:'3'},{text:'邻里团',value:'4'}]"
                              source-api=""></div>
 
                         <div form-radio text="商品品类" ng-model="param.sku" required="true" default="1"
