--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -22,41 +22,42 @@
                              source-api=""></div>
                         <div form-input text="单次限购份数" ng-model="param.order_count_max" type="number"
                              min="1" required="true"></div>
-                        <div form-input text="已售份数基数" ng-model="param.base_sale_count" type="number"
-                             min="1" required="true"></div>
+                        <!--<div form-input text="已售份数基数" ng-model="param.base_sale_count" type="number"-->
+                             <!--min="1"></div>-->
                         <div form-date-time text="上架时间" ng-model="param.start_time" required="true"></div>
                         <div form-date-time text="下架时间" ng-model="param.end_time" required="true"></div>
-                        <div form-image text="头图" ng-model="param.pics" max="100" required="true"></div>
+                        <div form-image text="运营大图" ng-model="param.pics" max="100" required="true"></div>
+                        <div form-image text="缩略小图" ng-model="param.thumbnail_pics" max="100"></div>
                     </div>
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>活动规则</h4>
                         <div form-radio text="活动类型" type="radio" ng-model="param.category" required="true" default="3"
-                             source="[{text:'一起玩',value:'3'},{text:'众筹',value:'4'}]" source-api=""></div>
+                             source="[{text:'众筹',value:'3'},{text:'一起玩',value:'4'}]" source-api=""></div>
                         <div form-input text="目标金额" ng-model="param.act_goal_price" required="true" min="0"
-                             type="number"
-                             ng-show="param.category==4" ng-disabled="$stateParams.product_id"></div>
+                             max="options_goal_price"
+                             type="number" ng-show="param.category==3"></div>
 
                         <div form-table text="活动类目" ng-model="param.options" required="true" max="1"
                              columns="[{'name': 'ID', 'field': 'option_id',disabled:'true'},
                              {'name': '类目', 'field': 'option_name'},
-                             {'name': '价格', 'field': 'option_price'},
+                             {'name': '价格', 'field': 'option_price',type:'number',min:'0',minLength:'2'},
                              {'name': '库存', 'field': 'option_inventory'}]"></div>
 
                         <div form-checkbox text="配送城市" ng-model="param.visible_cities" required="true"
                              source="[{text:'上海市',value:'上海市'},{text:'南京市',value:'南京市'},
                              {text:'厦门市',value:'厦门市'},{text:'北京市',value:'北京市'}]" source-api=""></div>
                         <div form-radio text="物流" ng-model="param.delivery_type" required="true"
-                             source="[{text:'顺丰配送',value:'1'},{text:'商家负责配送',value:'2'},{text:'无配送',value:'3'}]"
+                             source="[{text:'无配送',value:'3'}]" default="3"
                              source-api=""></div>
                         <div form-input text="活动地点" ng-model="param.act_address" placeholder="玩法说明标题"></div>
                         <div form-date-time text="活动开始时间" ng-model="param.act_start_time" required="true"></div>
                         <div form-date-time text="活动结束时间" ng-model="param.act_end_time" required="true"></div>
                         <div form-date-time text="报名开始时间" ng-model="param.act_apply_start_time" required="true"></div>
                         <div form-date-time text="报名截止时间" ng-model="param.act_apply_end_time" required="true"></div>
-                        <div form-radio text="是否可选优惠券" ng-model="param.act_coupon" required="true" default="2"
-                             source="[{text:'可选',value:1},{text:'不可选',value:2}]" source-api=""></div>
+                        <!--<div form-radio text="是否可选优惠券" ng-model="param.act_coupon" required="true" default="2"-->
+                             <!--source="[{text:'可选',value:1},{text:'不可选',value:2}]" source-api=""></div>-->
                     </div>
                 </div>
                 <div class="panel panel-primary">
