--- a/app/scripts/views/container/main.html
+++ b/app/scripts/views/container/main.html
@@ -14,10 +14,10 @@
     </nav>
     <section class="dashboard-page ng-scope">
         <aside id="sidebar">
-            <perfect-scrollbar class="sidenav-outer" wheel-propagation="true" min-scrollbar-length="20">
+            <!--<perfect-scrollbar class="sidenav-outer" wheel-propagation="true" min-scrollbar-length="20">-->
                 <side-menu></side-menu>
                 <!--<side-widgets></side-widgets>-->
-            </perfect-scrollbar>
+            <!--</perfect-scrollbar>-->
         </aside>
         <section id="body-container" ui-view>
         </section>
