--- a/app/scripts/views/directive/hjm_date.html
+++ b/app/scripts/views/directive/hjm_date.html
@@ -1,11 +1,11 @@
 <div class="datepicker_class">
-    <p class="input-group">
+    <p class="input-group appendTimepicker">
         <input type="date" class="form-control" datepicker-popup ng-model="dt" is-open="isopen" min-date="minDate"
                date-disabled="disabled(date, mode)" ng-change="changed();" close-text="关闭" clear-text="清空"
-               current-text="今天" style="width: 160px;"/>
+               ng-disabled="disabled" current-text="今天" style="width: 160px;"/>
         <span class="input-group-btn" style="width: 40px;">
-            <button type="button" class="btn btn-default" ng-click="open($event)">
-                <i class="glyphicon glyphicon-calendar"></i>
+            <button type="button" class="btn btn-default" ng-click="open($event)" ng-disabled="disabled"
+                    style="margin-left: -1px;"><i class="glyphicon glyphicon-calendar"></i>
             </button>
         </span>
     </p>
