--- a/app/scripts/views/biz/support/opencities.html
+++ b/app/scripts/views/biz/support/opencities.html
@@ -6,14 +6,14 @@
     </style>
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title">新增支持城市</h3>
+            <h3 class="panel-title">新增开通城市</h3>
         </div>
         <div class="panel-body">
             <form class="form-horizontal" name="FormBody" novalidate>
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <div class="col-sm-8">
-                            <h4>新增支持城市</h4>
+                            <h4>新增开通城市</h4>
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">城市<span class="form_label_dangus">*</span></label>
                                 <p class="form-control-static col-sm-4" ng-bind="param.city_name"></p>
