--- a/app/scripts/views/directive/hjm_content2img.html
+++ b/app/scripts/views/directive/hjm_content2img.html
@@ -1,7 +1,8 @@
 <div class="contentimg">
     <style type="text/css">
         .contents {
-            border-top: 1px #ccc solid;
+            /*border-top: 1px #ccc solid;*/
+            border: 1px #ccc dashed;
             padding-top: 10px;
             margin-bottom: 15px;
         }
@@ -18,36 +19,38 @@
             border: 0;
         }
     </style>
-    <div class="form-group" ng-repeat="item in list">
-        <div class="col-sm-12" ng-class="{contents:onlyContent!=1}">
-            <div class="col-sm-12 form-group">
-                <a class="btn btn-info btn-rounded" ng-bind="($index+1)"></a>
-                <a class="btn btn-success btn-rounded" ng-if="onlyContent!=1"
-                   ng-class="{'btn-success':!item.showContent,'btn-danger':item.showContent}"
-                   ng-click="toggleShow(item,'showContent')">
-                    <span class="glyphicon"
-                          ng-class="{'glyphicon-plus':!item.showContent,'glyphicon-trash':item.showContent}">
-                    </span> {{item.showContentTitle}}
-                </a>
-                <a class="btn btn-success btn-rounded" ng-if="onlyContent!=1"
-                   ng-class="{'btn-success':!item.showImg,'btn-danger':item.showImg}"
-                   ng-click="toggleShow(item,'showImg')">
-                    <span class="glyphicon"
-                          ng-class="{'glyphicon-plus':!item.showImg,'glyphicon-trash':item.showImg}">
-                    </span> {{item.showImgTitle}}
-                </a>
-                <a class="btn btn-danger btn-rounded" ng-if="onlyContent!=1" ng-click="del($index);">
-                    <span class="glyphicon glyphicon-trash"></span> 删除这一条图文</a>
-            </div>
-            <div class="col-sm-12" ng-if="!!item.showContent">
-                <show-textarea ng-model="item.contentData" placeholder="填写你要说的"></show-textarea>
-            </div>
-            <div class="col-sm-12" ng-if="!!item.showImg">
-                <show-upload images="item.pics" hasimages=""></show-upload>
-            </div>
-        </div>
-    </div>
-    <div class="form-group">
+    <!--<div class="form-group " ng-repeat="item in list">-->
+        <!--<div class="col-sm-12" ng-class="{contents:onlyContent!=1}">-->
+            <!--<div class="col-sm-12 form-group" ng-class="{'hide':disabled}">-->
+                <!--<a class="btn btn-info btn-rounded" ng-bind="($index+1)"></a>-->
+                <!--<a class="btn btn-success btn-rounded" ng-if="onlyContent!=1"-->
+                   <!--ng-class="{'btn-success':!item.showContent,'btn-danger':item.showContent}"-->
+                   <!--ng-click="toggleShow(item,'showContent')">-->
+                    <!--<span class="glyphicon"-->
+                          <!--ng-class="{'glyphicon-plus':!item.showContent,'glyphicon-trash':item.showContent}">-->
+                    <!--</span> {{item.showContentTitle}}-->
+                <!--</a>-->
+                <!--<a class="btn btn-success btn-rounded" ng-if="onlyContent!=1"-->
+                   <!--ng-class="{'btn-success':!item.showImg,'btn-danger':item.showImg}"-->
+                   <!--ng-click="toggleShow(item,'showImg')">-->
+                    <!--<span class="glyphicon"-->
+                          <!--ng-class="{'glyphicon-plus':!item.showImg,'glyphicon-trash':item.showImg}">-->
+                    <!--</span> {{item.showImgTitle}}-->
+                <!--</a>-->
+                <!--<a class="btn btn-danger btn-rounded" ng-if="onlyContent!=1" ng-click="del($index);">-->
+                    <!--<span class="glyphicon glyphicon-trash"></span> 删除这一条图文</a>-->
+            <!--</div>-->
+            <!--<div class="col-sm-12" ng-if="!!item.showContent">-->
+                <!--<show-textarea ng-model="item.contentData" placeholder="填写你要说的"-->
+                               <!--disabled-role="{{disabledRole}}"></show-textarea>-->
+            <!--</div>-->
+            <!--<div class="col-sm-12" ng-if="!!item.showImg">-->
+                <!--<show-upload images="item.pics" hasimages="" disabled-role="{{disabledRole}}"></show-upload>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    <div class="content-and-img"></div>
+    <div class="form-group" ng-class="{'hide':disabled}">
         <a class="btn btn-success btn-rounded" ng-click="add();" ng-if="onlyContent!=1">
             <span class="glyphicon glyphicon-plus"></span> 新增一条
         </a>
