--- a/app/scripts/views/directive/hjm_date_time.html
+++ b/app/scripts/views/directive/hjm_date_time.html
@@ -1,17 +1,19 @@
 <div class="datepicker_class">
-    <p class="input-group">
+    <p class="input-group appendTimepicker">
         <input type="date" class="form-control" datepicker-popup ng-model="dt" is-open="isopen" min-date="minDate"
-               date-disabled="disabled(date, mode)" ng-change="changed();" close-text="关闭" close-text="关闭"
-               clear-text="清空" current-text="今天" style="width: 160px;"/>
+               date-disabled="disabled(date, mode)" ng-change="changed();" close-text="关闭" clear-text="清空"
+               ng-disabled="disabled" current-text="今天" style="width: 160px;"/>
         <span class="input-group-btn" style="width: 40px;">
-            <button type="button" class="btn btn-default" ng-click="open($event)" style="margin-left: -1px;">
-                <i class="glyphicon glyphicon-calendar"></i>
+            <button type="button" class="btn btn-default" ng-click="open($event)" ng-disabled="disabled"
+                    style="margin-left: -1px;"><i class="glyphicon glyphicon-calendar"></i>
             </button>
         </span>
-        <timepicker class="" ng-model="tp" show-meridian="false" show-spinners="false" mousewheel="true"
-                    arrowkeys="true" style="margin-left: 3px;"
-                    ng-change="changed();">
-        </timepicker>
+        <!--<timepicker class="" ng-model="tp" show-meridian="false" show-spinners="false"-->
+        <!--mousewheel="true" readonly-input="{{disabled}}"-->
+        <!--arrowkeys="true" style="margin-left: 3px;"-->
+        <!--ng-change="changed();">-->
+        <!--</timepicker>-->
+        <!--<div class="timepickeTmp"></div>-->
     </p>
     <p class="bg-info text-center" ng-if="showtip">上下方向键调时间</p>
 </div>
