--- a/app/scripts/views/directive/upload/showUpload.html
+++ b/app/scripts/views/directive/upload/showUpload.html
@@ -29,7 +29,7 @@
     <table class="table table-hover table-bordered table-condensed">
         <thead>
         <tr>
-            <th width="50%">图片名称</th>
+            <th width="50%">图片</th>
             <th width="10%" ng-show="uploader.isHTML5">大小</th>
             <th width="20%" ng-show="uploader.isHTML5">上传进度</th>
             <th width="10%">状态</th>
@@ -37,32 +37,18 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="item in oldImages">
-            <td>
-                <a class="img_a">
-                    <img class="img-responsive" ng-src="{{item.url}}"/>
-                </a>
-            </td>
-            <td></td>
-            <td></td>
-            <td class="text-center"></td>
-            <td>
-                <!--<input class="form-control upload-image" type="file" nv-file-select uploader="uploader"/>-->
-                <button type="button" class="btn btn-primary btn-xs btn-rounded" ng-click="addImage($index)">
-                    <span class="glyphicon glyphicon-plus"></span> 插入
-                </button>
-                <button type="button" class="btn btn-danger btn-xs btn-rounded" ng-click="removeImage($index)">
-                    <span class="glyphicon glyphicon-trash"></span> 移除
-                </button>
-            </td>
-        </tr>
         <tr ng-repeat="(k,v) in uploader.queue track by $index" ng-required="required">
-            <td>
+            <td width="50%">
                 <strong class="ng-binding" ng-bind="v.file.name" ng-if="!v.qiniu_url"></strong>
                 <img class="img-responsive" ng-src="{{v.qiniu_url}}" ng-if="v.qiniu_url">
                 <div ng-show="uploader.isHTML5" ng-thumb="{ file: v._file, height: 100 , itemobj : v}"></div>
+                <a class="img_a" ng-if="v.old">
+                    <img class="img-responsive" ng-src="{{v.url}}"/>
+                </a>
             </td>
-            <td ng-show="uploader.isHTML5" nowrap="" class="ng-binding">{{v.file.size/1024/1024|number:2}}MB</td>
+            <td ng-show="uploader.isHTML5">
+                <span ng-if="!v.old" ng-bind="(v.file.size/1024/1024|number:2)+'MB'"></span>
+            </td>
             <td ng-show="uploader.isHTML5">
                 <div class="progress" style="margin-bottom: 0;">
                     <div class="progress-bar" role="progressbar" style="width:{{v.progress}}%;"
@@ -70,23 +56,32 @@
                 </div>
             </td>
             <td class="text-center">
-                <span ng-show="v.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-                <span ng-show="v.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-                <span ng-show="v.isError"><i class="glyphicon glyphicon-remove"></i></span>
+                <div ng-if="!v.old">
+                    <span ng-show="v.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
+                    <span ng-show="v.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
+                    <span ng-show="v.isError"><i class="glyphicon glyphicon-remove"></i></span>
+                </div>
             </td>
-            <td nowrap="">
-                <button type="button" class="btn btn-success btn-xs btn-rounded" ng-click="v.upload()"
-                        ng-disabled="v.isReady || v.isUploading || v.isSuccess">
-                    <span class="glyphicon glyphicon-upload"></span> 上传
-                </button>
-                <button type="button" class="btn btn-danger btn-xs btn-rounded" ng-click="delImage(v)">
-                    <span class="glyphicon glyphicon-trash"></span> 移除
-                </button>
+            <td>
+                <div ng-class="{'hide':disabled}">
+                    <!--<button type="button" class="btn btn-primary btn-xs btn-rounded" ng-click="addImage($index)">-->
+                    <!--<span class="glyphicon glyphicon-plus"></span> 插入-->
+                    <!--</button>-->
+                    <button type="button" class="btn btn-success btn-xs btn-rounded" ng-click="v.upload()"
+                            ng-if="!v.old"
+                            ng-disabled="v.isReady || v.isUploading || v.isSuccess">
+                        <span class="glyphicon glyphicon-upload"></span> 上传
+                    </button>
+                    <button type="button" class="btn btn-danger btn-xs btn-rounded" ng-click="delImage(k,v)"
+                            show-role="'{{disabledRole}}'">
+                        <span class="glyphicon glyphicon-trash"></span> 移除
+                    </button>
+                </div>
             </td>
         </tr>
         </tbody>
     </table>
-    <div>
+    <div ng-class="{'hide':disabled}">
         <div class="form-group">
             <!--上传过程:-->
             <div class="col-sm-12">
@@ -107,6 +102,9 @@
                 <button type="button" class="btn btn-danger btn-rounded" ng-click="removeAll()"
                         ng-disabled="!uploader.queue.length">
                     <span class="glyphicon glyphicon-trash"></span> 全部移除
+                </button>
+                <button type="button" class="btn btn-warning btn-rounded" ng-click="log()">
+                    <span class="glyphicon glyphicon-add"></span> log
                 </button>
             </div>
         </div>
