--- a/app/scripts/views/biz/web/update.html
+++ b/app/scripts/views/biz/web/update.html
@@ -9,10 +9,9 @@
                     <div class="panel-body">
                         <h4>推广参数</h4>
                         <div form-input text="推广网址" ng-model="param.url" placeholder="推广网址" required="true"></div>
-                        <div form-input text="广告来源" ng-model="param.utm_source" placeholder="例如:wx"
+                        <div form-input text="广告来源" ng-model="param.utm_source" placeholder="例如:weixinsrv"
                              required="true"></div>
-                        <div form-input text="广告媒介" ng-model="param.utm_medium" placeholder="例如:微信文章"
-                             required="true"></div>
+                        <div form-input text="广告媒介" ng-model="param.utm_medium" placeholder="例如:微信文章"></div>
                         <div form-input text="广告名称" ng-model="param.utm_campaign" placeholder="例如:20160808"></div>
                     </div>
                 </div>
