--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -62,8 +62,8 @@
                              ng-show="param.delivery_type!=3" ng-disabled="$stateParams.product_id"
                              source="[{text:'无需指定',value:'2'}]" source-api=""></div>
 
-                        <div form-input text="活动地点" ng-model="param.act_address" placeholder="活动地点"></div>
-                        <div form-input text="详细地址" ng-model="param.act_detailed_address" placeholder="详细地址"></div>
+                        <div form-input text="活动地点" ng-model="param.act_address" placeholder="例如:永达国际大厦"></div>
+                        <div form-input text="详细地址" ng-model="param.act_detailed_address" placeholder="例如:上海市浦东新区龙阳路2277号"></div>
                         <div form-date-time text="活动开始时间" ng-model="param.act_start_time" required="true"></div>
                         <div form-date-time text="活动结束时间" ng-model="param.act_end_time" required="true"></div>
                         <div form-date-time text="报名开始时间" ng-model="param.act_apply_start_time" required="true"></div>
